--- a/preview.colorlib.com/theme/aranoz/blog.html
+++ b/preview.colorlib.com/theme/aranoz/blog.html
@@ -90,7 +90,8 @@ blog
         <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+                    <input type="text" class="form-control" id="search_input" pl
+                    holder="Search Here">
                     <button type="submit" class="btn"></button>
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
@@ -485,17 +486,15 @@ blog
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
+                                </script> All rights reserved | This template is made by <a href="https://jaystance.netlify.app/" target="_blank">jay Stance</a>
                             </P>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="footer_icon social_icon">
                             <ul class="list-unstyled">
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                                <li><a href="https://facebook.com/jaystance11" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/jay-stance-231a8a216/" class="single_social_icon"><i class="fab fa-facebook-">in</i></a></li>
                             </ul>
                         </div>
                     </div>
